crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_regex_stops_at_line_end.txt
Q = (identifier =~ /foo
Second = (number) @n
------------------ DIAGNOSTICS -------------------
error: missing closing `/` for regex
 --> query.ptk:1:20
  |
1 | Q = (identifier =~ /foo
  |                    ^^^^
